--- a/modules/claim_process/locale/fr_FR.po
+++ b/modules/claim_process/locale/fr_FR.po
@@ -10,7 +10,7 @@ msgctxt "error:claim.claim:"
 msgid "Object %s is currently locked by user %s"
 msgstr "L'objet %s est verrouillé par l'utilisateur %s"
 
-msgctxt "error:claim.declaration_process_finder:"
+msgctxt "error:claim.declare:"
 msgid "Please pick a process from the selection"
 msgstr "Choisir un processus de la sélection"
 
@@ -119,11 +119,11 @@ msgid "Loss"
 msgstr "Préjudice"
 
 msgctxt ""
-"wizard_button:claim.declaration_process_finder,process_parameters,action:"
+"wizard_button:claim.declare,process_parameters,action:"
 msgid "Start Process"
 msgstr "Démarrer le processus"
 
 msgctxt ""
-"wizard_button:claim.declaration_process_finder,process_parameters,end:"
+"wizard_button:claim.declare,process_parameters,end:"
 msgid "Cancel"
 msgstr "Annuler"
